Fixed conviters issue to delimit noof iterations to achieve extremum

--- a/mayaviimgformat.ipynb
+++ b/mayaviimgformat.ipynb
@@ -200,10 +200,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "run src/visualization.py\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
