Added some important TODO . Sank Demo.

--- a/revampterraintest.ipynb
+++ b/revampterraintest.ipynb
@@ -1,32 +1,21 @@
 {
- "metadata": {
-  "name": ""
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "import numpy as np"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 11
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from src import terrain\n",
-      "%load_ext autoreload\n",
-      "%autoreload 2\n"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -38,40 +27,41 @@
        ]
       }
      ],
+     "input": [
+      "from src import terrain\n",
+      "%load_ext autoreload\n",
+      "%autoreload 2"
+     ],
+     "language": "python",
      "prompt_number": 60
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "run src/terrain.py\n"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [],
+     "input": [
+      "run src/terrain.py"
+     ],
+     "language": "python",
      "prompt_number": 59
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "(terrain_x,terrain_y,terrain_z) = np.load('simulationdata/corrected_terrain_mt.npy')\n",
       "x = [0,200,400,600,1000]\n",
       "y = [230,400,600,400,300]"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 7
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "road_x = [x[y[i],x[i]] for i in range(len(x))]\n",
-      "road_x"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -85,61 +75,61 @@
        ]
       }
      ],
+     "input": [
+      "road_x = [x[y[i],x[i]] for i in range(len(x))]\n",
+      "road_x"
+     ],
+     "language": "python",
      "prompt_number": 53
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "terrain_x[y,x]"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 57,
        "text": [
         "array([    0.        ,   911.5392449 ,  1823.13060433,  2734.61781078,\n",
         "        4557.63118705])"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "terrain_x[y,x]"
+     ],
+     "language": "python",
      "prompt_number": 57
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "terrain_x[900,x]"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 47,
        "text": [
         "array([    0.        ,   911.60437414,  1823.20874782,  2734.81319853,\n",
         "        4558.02199154])"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "terrain_x[900,x]"
+     ],
+     "language": "python",
      "prompt_number": 47
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "terrain_y"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 41,
        "text": [
@@ -156,72 +146,73 @@
         "          2.98976232e+03,   2.98976232e+03,   2.98976232e+03],\n",
         "       [  2.99268772e+03,   2.99268772e+03,   2.99268772e+03, ...,\n",
         "          2.99268772e+03,   2.99268772e+03,   2.99268772e+03]])"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "terrain_y"
+     ],
+     "language": "python",
      "prompt_number": 41
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "t = terrain.terrain((terrain_x,terrain_y,terrain_z))"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 5
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "r = terrain.road((x,y),(terrain_x,terrain_y,terrain_z))\n"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [],
+     "input": [
+      "r = terrain.road((x,y),(terrain_x,terrain_y,terrain_z))"
+     ],
+     "language": "python",
      "prompt_number": 62
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "r.road_y"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 63,
        "text": [
         "array([  672.84349448,  1170.16233702,  1755.24304312,  1170.16233702,\n",
         "         877.62186838])"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "r.road_y"
+     ],
+     "language": "python",
      "prompt_number": 63
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "dw = np.mgrid[1000:1500:,-4:4].T.reshape(-1,2)\n"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [],
+     "input": [
+      "dw = np.mgrid[1000:1500:,-4:4].T.reshape(-1,2)"
+     ],
+     "language": "python",
      "prompt_number": 64
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "r.dwtoxyz(np.array([200,100,10]),np.array([0,0,0]))"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -233,7 +224,6 @@
        ]
       },
       {
-       "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
        "text": [
@@ -241,25 +231,25 @@
        ]
       },
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 69,
        "text": [
         "(array([ 198.43426359,   99.65590065,    9.88345692]),\n",
         " array([ 681.97002587,  667.34395452,  671.32255364]),\n",
         " array([ 596.21621924,  593.48080175,  592.70016196]))"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "r.dwtoxyz(np.array([200,100,10]),np.array([0,0,0]))"
+     ],
+     "language": "python",
      "prompt_number": 69
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "cs = r.dwtoxyz(dw[:,0],dw[:,1])"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -271,7 +261,6 @@
        ]
       },
       {
-       "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
        "text": [
@@ -279,50 +268,61 @@
        ]
       }
      ],
+     "input": [
+      "cs = r.dwtoxyz(dw[:,0],dw[:,1])"
+     ],
+     "language": "python",
      "prompt_number": 70
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "plt.scatter(cs[0],cs[1])\n",
       "plt.show()"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 71
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "r.road_y"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 23,
        "text": [
         "array([ 0.,  0.,  0.,  0.,  0.])"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "r.road_y"
+     ],
+     "language": "python",
      "prompt_number": 23
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "name": ""
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
